@@ -18,8 +18,9 @@ $ mvn git-code-format:install-hooks
 **Run Google Java Style manually**
 
 ```bash
-# This export might be necessary to prevent maven issues
-$ export MAVEN_OPTS="--add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED   --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED   --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED   --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED   --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
-
 $ mvn git-code-format:format-code
 ```
+
+## IntelliJ
+- Install [google-java-format](https://plugins.jetbrains.com/plugin/8527-google-java-format)
+- [Disable wildcard imports](https://www.jetbrains.com/help/idea/creating-and-optimizing-imports.html#disable-wildcard-imports)
